pkg/lang/syntax/testdata/ub/validate/invalid/factory/configuration-meta-selector-mismatch.ub
factory: {
  configurations: {
    formal: greet {}
  }

  actions: {
    say: aws.say {
      @configuration: configuration.formal
    }
  }
}
